WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132393
Fix PageVisibility on iOS
https://bugs.webkit.org/show_bug.cgi?id=132393
Summary
Fix PageVisibility on iOS
Gavin Barraclough
Reported
2014-04-30 11:50:19 PDT
.
Attachments
Fix
(33.93 KB, patch)
2014-04-30 12:12 PDT
,
Gavin Barraclough
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2014-04-30 12:12:42 PDT
Created
attachment 230508
[details]
Fix
WebKit Commit Bot
Comment 2
2014-04-30 12:14:10 PDT
Attachment 230508
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/ProcessThrottler.h:48: The parameter name "throttler" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/UIProcess/ios/ProcessThrottler.h:48: The parameter name "visibility" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/UIProcess/ios/ProcessThrottler.h:69: The parameter name "visibility" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/UIProcess/ios/ProcessThrottler.h:99: An else if statement should be written as an if statement when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] Total errors found: 4 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3
2014-04-30 12:44:27 PDT
Comment on
attachment 230508
[details]
Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=230508&action=review
r=me I'd probably out-of-line the ProcessThottler.h stuff since it's included from everywhere in WK2.
> Source/WebKit2/UIProcess/WebProcessProxy.h:138 > + ProcessThrottler& throttler() { return *m_throttler.get(); }
You don't need the .get() here.
> Source/WebKit2/UIProcess/ios/ProcessAssertion.mm:35 > +const BKSProcessAssertionFlags suspenedTabFlags = (BKSProcessAssertionAllowIdleSleep);
Typo, should be suspendedTabFlags.
Gavin Barraclough
Comment 4
2014-04-30 12:53:08 PDT
Transmitting file data ................ Committed revision 168038.
Gavin Barraclough
Comment 5
2014-04-30 17:24:31 PDT
+
r168069
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug