Fix PageVisibility on iOS https://bugs.webkit.org/show_bug.cgi?id=132393

Rubber stamped by Tim Horton

* UIProcess/ios/PageClientImplIOS.mm:
(WebKit::PageClientImpl::isViewWindowActive):
(WebKit::PageClientImpl::isViewFocused):
(WebKit::PageClientImpl::isViewVisible):
(WebKit::PageClientImpl::isViewVisibleOrOccluded):
(WebKit::PageClientImpl::isVisuallyIdle):
    - m_contentView -> m_webView



Canonical link: https://commits.webkit.org/150434@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168069 268f45cc-cd09-0410-ab3c-d52691b4dbfc